1. added pagination support for front end 2. added account related query support 3. added simple business exception 4. added log config and CROS support 5. integrated with front end and fixed some bugs